- merge code from main branch

--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -1,4 +1,4 @@
-m4trace:aclocal.m4:1069: -1- m4_include([acinclude.m4])
+m4trace:aclocal.m4:9656: -1- m4_include([acinclude.m4])
 m4trace:configure.ac:1: -1- m4_include([ax_check_zlib.m4])
 m4trace:configure.ac:2: -1- m4_include([ax_check_openssl.m4])
 m4trace:configure.ac:3: -1- m4_include([ax_path_lib_pcre.m4])
@@ -245,7 +245,7 @@ m4trace:configure.ac:10: -1- AC_SUBST_TRACE([AM_BACKSLASH])
 m4trace:configure.ac:10: -1- m4_pattern_allow([^AM_BACKSLASH$])
 m4trace:configure.ac:10: -1- _AM_SUBST_NOTMAKE([AM_BACKSLASH])
 m4trace:configure.ac:12: -1- _m4_warn([obsolete], ['AM_CONFIG_HEADER': this macro is obsolete.
-You should use the 'AC_CONFIG_HEADERS' macro instead.], [aclocal.m4:698: AM_CONFIG_HEADER is expanded from...
+You should use the 'AC_CONFIG_HEADERS' macro instead.], [aclocal.m4:9285: AM_CONFIG_HEADER is expanded from...
 configure.ac:12: the top level])
 m4trace:configure.ac:12: -1- AC_CONFIG_HEADERS([src/config.h:src/config.h.in])
 m4trace:configure.ac:21: -1- AC_SUBST([SET_MAKE])
@@ -374,6 +374,168 @@ m4trace:configure.ac:30: -1- m4_pattern_allow([^SET_MAKE$])
 m4trace:configure.ac:31: -1- AC_SUBST([RANLIB])
 m4trace:configure.ac:31: -1- AC_SUBST_TRACE([RANLIB])
 m4trace:configure.ac:31: -1- m4_pattern_allow([^RANLIB$])
+m4trace:configure.ac:32: -1- LT_INIT
+m4trace:configure.ac:32: -1- m4_pattern_forbid([^_?LT_[A-Z_]+$])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^(_LT_EOF|LT_DLGLOBAL|LT_DLLAZY_OR_NOW|LT_MULTI_MODULE)$])
+m4trace:configure.ac:32: -1- AC_REQUIRE_AUX_FILE([ltmain.sh])
+m4trace:configure.ac:32: -1- AC_SUBST([LIBTOOL])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([LIBTOOL])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^LIBTOOL$])
+m4trace:configure.ac:32: -1- AC_CANONICAL_HOST
+m4trace:configure.ac:32: -1- AC_CANONICAL_BUILD
+m4trace:configure.ac:32: -1- AC_REQUIRE_AUX_FILE([config.sub])
+m4trace:configure.ac:32: -1- AC_REQUIRE_AUX_FILE([config.guess])
+m4trace:configure.ac:32: -1- AC_SUBST([build], [$ac_cv_build])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([build])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^build$])
+m4trace:configure.ac:32: -1- AC_SUBST([build_cpu], [$[1]])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([build_cpu])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^build_cpu$])
+m4trace:configure.ac:32: -1- AC_SUBST([build_vendor], [$[2]])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([build_vendor])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^build_vendor$])
+m4trace:configure.ac:32: -1- AC_SUBST([build_os])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([build_os])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^build_os$])
+m4trace:configure.ac:32: -1- AC_SUBST([host], [$ac_cv_host])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([host])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^host$])
+m4trace:configure.ac:32: -1- AC_SUBST([host_cpu], [$[1]])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([host_cpu])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^host_cpu$])
+m4trace:configure.ac:32: -1- AC_SUBST([host_vendor], [$[2]])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([host_vendor])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^host_vendor$])
+m4trace:configure.ac:32: -1- AC_SUBST([host_os])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([host_os])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^host_os$])
+m4trace:configure.ac:32: -1- AC_SUBST([SED])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([SED])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^SED$])
+m4trace:configure.ac:32: -1- AC_SUBST([GREP])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([GREP])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^GREP$])
+m4trace:configure.ac:32: -1- AC_SUBST([EGREP])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([EGREP])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^EGREP$])
+m4trace:configure.ac:32: -1- AC_SUBST([FGREP])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([FGREP])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^FGREP$])
+m4trace:configure.ac:32: -1- AC_SUBST([GREP])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([GREP])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^GREP$])
+m4trace:configure.ac:32: -1- AC_SUBST([LD])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([LD])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^LD$])
+m4trace:configure.ac:32: -1- AC_SUBST([DUMPBIN])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([DUMPBIN])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^DUMPBIN$])
+m4trace:configure.ac:32: -1- AC_SUBST([ac_ct_DUMPBIN])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([ac_ct_DUMPBIN])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^ac_ct_DUMPBIN$])
+m4trace:configure.ac:32: -1- AC_SUBST([DUMPBIN])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([DUMPBIN])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^DUMPBIN$])
+m4trace:configure.ac:32: -1- AC_SUBST([NM])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([NM])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^NM$])
+m4trace:configure.ac:32: -1- AC_SUBST([OBJDUMP])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([OBJDUMP])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^OBJDUMP$])
+m4trace:configure.ac:32: -1- AC_SUBST([OBJDUMP])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([OBJDUMP])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^OBJDUMP$])
+m4trace:configure.ac:32: -1- AC_SUBST([DLLTOOL])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([DLLTOOL])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^DLLTOOL$])
+m4trace:configure.ac:32: -1- AC_SUBST([DLLTOOL])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([DLLTOOL])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^DLLTOOL$])
+m4trace:configure.ac:32: -1- AC_SUBST([AR])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([AR])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^AR$])
+m4trace:configure.ac:32: -1- AC_SUBST([ac_ct_AR])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([ac_ct_AR])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^ac_ct_AR$])
+m4trace:configure.ac:32: -1- AC_SUBST([STRIP])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([STRIP])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^STRIP$])
+m4trace:configure.ac:32: -1- AC_SUBST([RANLIB])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([RANLIB])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^RANLIB$])
+m4trace:configure.ac:32: -1- m4_pattern_allow([LT_OBJDIR])
+m4trace:configure.ac:32: -1- AC_DEFINE_TRACE_LITERAL([LT_OBJDIR])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^LT_OBJDIR$])
+m4trace:configure.ac:32: -1- AH_OUTPUT([LT_OBJDIR], [/* Define to the sub-directory in which libtool stores uninstalled libraries.
+   */
+@%:@undef LT_OBJDIR])
+m4trace:configure.ac:32: -1- LT_SUPPORTED_TAG([CC])
+m4trace:configure.ac:32: -1- AC_SUBST([MANIFEST_TOOL])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([MANIFEST_TOOL])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^MANIFEST_TOOL$])
+m4trace:configure.ac:32: -1- AC_SUBST([DSYMUTIL])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([DSYMUTIL])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^DSYMUTIL$])
+m4trace:configure.ac:32: -1- AC_SUBST([NMEDIT])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([NMEDIT])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^NMEDIT$])
+m4trace:configure.ac:32: -1- AC_SUBST([LIPO])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([LIPO])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^LIPO$])
+m4trace:configure.ac:32: -1- AC_SUBST([OTOOL])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([OTOOL])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^OTOOL$])
+m4trace:configure.ac:32: -1- AC_SUBST([OTOOL64])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([OTOOL64])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^OTOOL64$])
+m4trace:configure.ac:32: -1- AH_OUTPUT([HAVE_DLFCN_H], [/* Define to 1 if you have the <dlfcn.h> header file. */
+@%:@undef HAVE_DLFCN_H])
+m4trace:configure.ac:32: -1- AC_SUBST([CPP])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([CPP])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^CPP$])
+m4trace:configure.ac:32: -1- AC_SUBST([CPPFLAGS])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([CPPFLAGS])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^CPPFLAGS$])
+m4trace:configure.ac:32: -1- AC_SUBST([CPP])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([CPP])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^CPP$])
+m4trace:configure.ac:32: -1- AC_DEFINE_TRACE_LITERAL([STDC_HEADERS])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^STDC_HEADERS$])
+m4trace:configure.ac:32: -1- AH_OUTPUT([STDC_HEADERS], [/* Define to 1 if you have the ANSI C header files. */
+@%:@undef STDC_HEADERS])
+m4trace:configure.ac:32: -1- AH_OUTPUT([HAVE_SYS_TYPES_H], [/* Define to 1 if you have the <sys/types.h> header file. */
+@%:@undef HAVE_SYS_TYPES_H])
+m4trace:configure.ac:32: -1- AH_OUTPUT([HAVE_SYS_STAT_H], [/* Define to 1 if you have the <sys/stat.h> header file. */
+@%:@undef HAVE_SYS_STAT_H])
+m4trace:configure.ac:32: -1- AH_OUTPUT([HAVE_STDLIB_H], [/* Define to 1 if you have the <stdlib.h> header file. */
+@%:@undef HAVE_STDLIB_H])
+m4trace:configure.ac:32: -1- AH_OUTPUT([HAVE_STRING_H], [/* Define to 1 if you have the <string.h> header file. */
+@%:@undef HAVE_STRING_H])
+m4trace:configure.ac:32: -1- AH_OUTPUT([HAVE_MEMORY_H], [/* Define to 1 if you have the <memory.h> header file. */
+@%:@undef HAVE_MEMORY_H])
+m4trace:configure.ac:32: -1- AH_OUTPUT([HAVE_STRINGS_H], [/* Define to 1 if you have the <strings.h> header file. */
+@%:@undef HAVE_STRINGS_H])
+m4trace:configure.ac:32: -1- AH_OUTPUT([HAVE_INTTYPES_H], [/* Define to 1 if you have the <inttypes.h> header file. */
+@%:@undef HAVE_INTTYPES_H])
+m4trace:configure.ac:32: -1- AH_OUTPUT([HAVE_STDINT_H], [/* Define to 1 if you have the <stdint.h> header file. */
+@%:@undef HAVE_STDINT_H])
+m4trace:configure.ac:32: -1- AH_OUTPUT([HAVE_UNISTD_H], [/* Define to 1 if you have the <unistd.h> header file. */
+@%:@undef HAVE_UNISTD_H])
+m4trace:configure.ac:32: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DLFCN_H])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^HAVE_DLFCN_H$])
+m4trace:configure.ac:32: -1- LT_SUPPORTED_TAG([CXX])
+m4trace:configure.ac:32: -1- AC_SUBST([CXXCPP])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([CXXCPP])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^CXXCPP$])
+m4trace:configure.ac:32: -1- AC_SUBST([CPPFLAGS])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([CPPFLAGS])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^CPPFLAGS$])
+m4trace:configure.ac:32: -1- AC_SUBST([CXXCPP])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([CXXCPP])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^CXXCPP$])
+m4trace:configure.ac:32: -1- AC_SUBST([LD])
+m4trace:configure.ac:32: -1- AC_SUBST_TRACE([LD])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^LD$])
 m4trace:configure.ac:36: -1- AH_OUTPUT([HAVE_ARPA_INET_H], [/* Define to 1 if you have the <arpa/inet.h> header file. */
 @%:@undef HAVE_ARPA_INET_H])
 m4trace:configure.ac:36: -1- AH_OUTPUT([HAVE_FCNTL_H], [/* Define to 1 if you have the <fcntl.h> header file. */
@@ -402,43 +564,6 @@ m4trace:configure.ac:36: -1- AH_OUTPUT([HAVE_SYS_SOCKET_H], [/* Define to 1 if y
 @%:@undef HAVE_SYS_SOCKET_H])
 m4trace:configure.ac:36: -1- AH_OUTPUT([HAVE_SYS_TIME_H], [/* Define to 1 if you have the <sys/time.h> header file. */
 @%:@undef HAVE_SYS_TIME_H])
-m4trace:configure.ac:36: -1- AH_OUTPUT([HAVE_UNISTD_H], [/* Define to 1 if you have the <unistd.h> header file. */
-@%:@undef HAVE_UNISTD_H])
-m4trace:configure.ac:36: -1- AC_SUBST([CPP])
-m4trace:configure.ac:36: -1- AC_SUBST_TRACE([CPP])
-m4trace:configure.ac:36: -1- m4_pattern_allow([^CPP$])
-m4trace:configure.ac:36: -1- AC_SUBST([CPPFLAGS])
-m4trace:configure.ac:36: -1- AC_SUBST_TRACE([CPPFLAGS])
-m4trace:configure.ac:36: -1- m4_pattern_allow([^CPPFLAGS$])
-m4trace:configure.ac:36: -1- AC_SUBST([CPP])
-m4trace:configure.ac:36: -1- AC_SUBST_TRACE([CPP])
-m4trace:configure.ac:36: -1- m4_pattern_allow([^CPP$])
-m4trace:configure.ac:36: -1- AC_SUBST([GREP])
-m4trace:configure.ac:36: -1- AC_SUBST_TRACE([GREP])
-m4trace:configure.ac:36: -1- m4_pattern_allow([^GREP$])
-m4trace:configure.ac:36: -1- AC_SUBST([EGREP])
-m4trace:configure.ac:36: -1- AC_SUBST_TRACE([EGREP])
-m4trace:configure.ac:36: -1- m4_pattern_allow([^EGREP$])
-m4trace:configure.ac:36: -1- AC_DEFINE_TRACE_LITERAL([STDC_HEADERS])
-m4trace:configure.ac:36: -1- m4_pattern_allow([^STDC_HEADERS$])
-m4trace:configure.ac:36: -1- AH_OUTPUT([STDC_HEADERS], [/* Define to 1 if you have the ANSI C header files. */
-@%:@undef STDC_HEADERS])
-m4trace:configure.ac:36: -1- AH_OUTPUT([HAVE_SYS_TYPES_H], [/* Define to 1 if you have the <sys/types.h> header file. */
-@%:@undef HAVE_SYS_TYPES_H])
-m4trace:configure.ac:36: -1- AH_OUTPUT([HAVE_SYS_STAT_H], [/* Define to 1 if you have the <sys/stat.h> header file. */
-@%:@undef HAVE_SYS_STAT_H])
-m4trace:configure.ac:36: -1- AH_OUTPUT([HAVE_STDLIB_H], [/* Define to 1 if you have the <stdlib.h> header file. */
-@%:@undef HAVE_STDLIB_H])
-m4trace:configure.ac:36: -1- AH_OUTPUT([HAVE_STRING_H], [/* Define to 1 if you have the <string.h> header file. */
-@%:@undef HAVE_STRING_H])
-m4trace:configure.ac:36: -1- AH_OUTPUT([HAVE_MEMORY_H], [/* Define to 1 if you have the <memory.h> header file. */
-@%:@undef HAVE_MEMORY_H])
-m4trace:configure.ac:36: -1- AH_OUTPUT([HAVE_STRINGS_H], [/* Define to 1 if you have the <strings.h> header file. */
-@%:@undef HAVE_STRINGS_H])
-m4trace:configure.ac:36: -1- AH_OUTPUT([HAVE_INTTYPES_H], [/* Define to 1 if you have the <inttypes.h> header file. */
-@%:@undef HAVE_INTTYPES_H])
-m4trace:configure.ac:36: -1- AH_OUTPUT([HAVE_STDINT_H], [/* Define to 1 if you have the <stdint.h> header file. */
-@%:@undef HAVE_STDINT_H])
 m4trace:configure.ac:36: -1- AH_OUTPUT([HAVE_UNISTD_H], [/* Define to 1 if you have the <unistd.h> header file. */
 @%:@undef HAVE_UNISTD_H])
 m4trace:configure.ac:38: -1- AC_DEFINE_TRACE_LITERAL([NDEBUG])
@@ -766,3 +891,4 @@ m4trace:configure.ac:154: -1- AC_SUBST_TRACE([abs_builddir])
 m4trace:configure.ac:154: -1- AC_SUBST_TRACE([abs_top_builddir])
 m4trace:configure.ac:154: -1- AC_SUBST_TRACE([INSTALL])
 m4trace:configure.ac:154: -1- AC_SUBST_TRACE([MKDIR_P])
+m4trace:configure.ac:154: -1- AC_REQUIRE_AUX_FILE([ltmain.sh])
